crates/wdl-engine/tests/tasks/invalid-placeholder-sep/error.txt
error: type mismatch for placeholder option `sep`: expected type `Array[P]` where P: any primitive type, but found `Int`
   ┌─ tests/tasks/invalid-placeholder-sep/source.wdl:11:34
   │
11 │         String out = "~{sep=', ' read_json("not-array.json")}"
   │                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ this is type `Int`

